--- a/cisTopic.Rmd
+++ b/cisTopic.Rmd
@@ -3,34 +3,52 @@ title: "Clustering using cisTopic"
 output: html_notebook
 ---
 
-### Initialize cisTopic Object
+### Initialization cisTopic Object
 
 In this project, we make use of the software **cisTopic** (Bravo González-Blas et al., 2019), a framework employing the latent Dirichlet allocation (LDA) (Blei et al., 2003), that allows us to co-cluster DNA regulatory regions and cell types. 
 
+Define directories
+```{r}
+#Define path to store plots
+pathToPlotsDir = 'plots'
+if (!dir.exists(file.path (pathToPlotsDir))){
+  dir.create(file.path (pathToPlotsDir))
+}
+
+#Define path to store outputs
+pathToOutputsDir = 'outputs'
+if (!dir.exists(file.path (pathToOutputsDir))){
+  dir.create(file.path (pathToOutputDir))
+}
+```
 We load the ATAC-seq data that was generated using SNARE-seq. (Bakken et al., 2021)
 ```{r}
-ATACseq_dat = readRDS('ATACseq_data/Zhang_BICCN-H_20190523-20190611_huMOp_Final_AC_Peaks.RDS')
+ATACseq_data = readRDS('ATACseq_data/Zhang_BICCN-H_20190523-20190611_huMOp_Final_AC_Peaks.RDS')
 
 #Subset if needed
-#subset = ATACseq_data[1:2000,1:2000]
+#ATACseq_data = ATACseq_data[1:2000,1:2000]
 
 ```
 
-In order to run cisTopic, we must convert our input peak matrix into a **cisTopic object**. Afterwards, we are able to train different models with a given number of topics using **LDA** - Laten Dirichlet Allocation (Blei et al., 2003).
+In order to run cisTopic, we must convert our input peak matrix into a **cisTopic object**. We can then add extra information to this object from the given metadata file. 
 ```{r}
-
 #Transform matrix into cisTopic object
-cisTopicObject <- createcisTopicObject(subset, project.name='ATACseq_clustering')
+cisTopicObject <- createcisTopicObject(ATACseq_data, project.name='ATACseq_clustering')
 
 #Read metadata from txt file 
 metadata <- read.delim('ATAC-seq_data/Zhang_BICCN-H_20190523-20190611_huMOp_Final_Sample_Metadata.txt')
 
 #Subset if needed
-metadata = metadata [1:2000, ]
+#metadata = metadata [1:2000, ]
 
+#Give metadata dataframe and cisTopicObject matrix the same row names
+metadata <- data.frame(metadata, row.names = 1)
 #Add metadata to cisTopic Object
 cisTopicObject <- addCellMetadata(cisTopicObject, cell.data = metadata)
-
+```
+Afterwards, we are able to train different models with a given number of topics using **LDA** - Laten Dirichlet Allocation (Blei et al., 2003).
+```{r}
+#Run models
 cisTopicObject <- runWarpLDAModels(cisTopicObject, topic=c(2:15, 20, 25, 35, 40, 45, 50), seed=123, nCores=1, addModels=FALSE)
 ```
 We use the in-built function to select the best model. There are three available methods:
@@ -42,7 +60,7 @@ We use the in-built function to select the best model. There are three available
 
 The modified function outputs corresponding plots for each of the three methods, as well as saves the best model in the cisTopic object.
 ```{r}
-cisTopicObject <- selectModelModified(cisTopicObject, type='derivative')
+cisTopicObject <- selectModelModified(cisTopicObject, pathFolder = pathToPlotsDir, type='derivative')
 ```
 
 ### Cell states analysis
@@ -54,20 +72,32 @@ We can now use the resulting clustering to visualise the data, through a Umap an
 ```{r}
 cisTopicObject <- runUmap(cisTopicObject, target='cell')
 
-pdf('Umap.pdf')
+#Plot Umap; color by given attributes
+pdf(file.path(pathToPlotsDir, 'Umap.pdf'))
 plotFeatures(cisTopicObject, method='Umap', target='cell', topic_contr=NULL, colorBy=c('subclass', 'level1'))
-dev.off ()
+dev.off()
 
-pdf('heatmap.pdf')
+#Plot heatmap 
+pdf(file.path(pathToPlotsDir, 'heatmap.pdf'))
 cellTopicHeatmap(cisTopicObject, method='Probability', colorBy=c('subclass'))
 dev.off()
 ```
-
 ### Regulatory regions analysis
-The first step in this analysis is deriving a score that evaluates the likelihood of a region belonging to a certain topic. The software does this automatically using the getRegionScores function. 
+The first step in this analysis is deriving a score that evaluates the likelihood of a region belonging to a certain topic based on the proportion of region specific assignments to that topic. The software does this automatically using the getRegionScores function. 
 ```{r}
 cisTopicObject <- getRegionsScores(cisTopicObject, method='NormTop', scale=TRUE)
+```
+Following this, we can generate a BigWig file to be able to visualise the scored regions in the genome.
+```{r}
+library(TxDb.Hsapiens.UCSC.hg19.knownGene)
+txdb <- TxDb.Hsapiens.UCSC.hg19.knownGene
 
+getBigwigFiles(cisTopicObject, path= file.path(pathToOutputsDir, 'cisTopicBigWig'), seqlengths=seqlengths(txdb))
 ```
 
+Save the cisTopic object.
+```{r}
+#Save the cisTopicObject
+saveRDS(cisTopicObject, file= file.path(pathToOutputsDir,'cisTopicObject.Rds'))
+```
 
