--- a/cisTopic.Rmd
+++ b/cisTopic.Rmd
@@ -22,15 +22,12 @@ if (!dir.exists(file.path (pathToPlotsDir))){
 #Define path to store outputs
 pathToOutputsDir = 'outputs'
 if (!dir.exists(file.path (pathToOutputsDir))){
-  dir.create(file.path (pathToOutputDir))
+  dir.create(file.path (pathToOutputsDir))
 }
 ```
 We load the ATAC-seq data that was generated using SNARE-seq. (Bakken et al., 2021)
 ```{r}
-ATACseq_data = readRDS('ATACseq_data/Zhang_BICCN-H_20190523-20190611_huMOp_Final_AC_Peaks.RDS')
-
-#Subset if needed
-#ATACseq_data = ATACseq_data[1:2000,1:2000]
+ATACseqData = readRDS('ATACseq_data/Zhang_BICCN-H_20190523-20190611_huMOp_Final_AC_Peaks.RDS')
 ```
 
 In order to run cisTopic, we must convert our input peak matrix into a **cisTopic object**. We can then add extra information to this object from the given metadata file. 
@@ -40,9 +37,6 @@ cisTopicObject <- createcisTopicObject(ATACseq_data, project.name='ATACseq_clust
 
 #Read metadata from txt file 
 metadata <- read.delim('ATAC-seq_data/Zhang_BICCN-H_20190523-20190611_huMOp_Final_Sample_Metadata.txt')
-
-#Subset if needed
-#metadata = metadata [1:2000, ]
 
 #Give metadata dataframe and cisTopicObject matrix the same row names
 metadata <- data.frame(metadata, row.names = 1)
@@ -68,34 +62,56 @@ cisTopicObject <- selectModelModified(cisTopicObject, pathFolder = pathToPlotsDi
 
 ### Cell states analysis
 
-We can now use the resulting clustering to visualise the data, through a Umap and heatmap. 
-
-
-*will add interpretation
+We can now use the resulting clustering to visualise the data. We can run tSNE and UMAP dimension reduction methods on the probability distributions of topics belonging to cells, and compare the results.
 ```{r}
+#Run Umap
 cisTopicObject <- runUmap(cisTopicObject, target='cell')
+#Run tSNE
+cisTopicObject <- runtSNE(cisTopicObject, target='cell')
 
-#Plot Umap; color by given attributes
-pdf(file.path(pathToPlotsDir, 'Umap.pdf'))
-plotFeatures(cisTopicObject, method='Umap', target='cell', topic_contr=NULL, colorBy=c('subclass', 'level1'))
-dev.off()
+#Extract Umap and tSNE scores for plotting
+dimReductionCoords = cisTopicObject@dr$cell
+#Read from Rds
+#dimReductionCoords = readRDS(file.path(pathToOutputsDir,'dimReductionCoords.Rds'))
 
-#Plot heatmap 
-pdf(file.path(pathToPlotsDir, 'heatmap.pdf'))
-cellTopicHeatmap(cisTopicObject, method='Probability', colorBy=c('subclass'))
-dev.off()
+#Extract scores for topic assignment per cell
+cellTopicAssignments <- cisTopicObject@selected.model$document_expects 
+#read from Rds
+#cellTopicAssignments <- readRDS(file.path(pathToOutputsDir,'cellTopicAssignments.Rds'))
+#Convert to dataframe with all info
+cellData <- createCellTopicDataFrame (cellTopicAssignments, dimReductionCoords, metadata)
+
+#Save dataframe
+write_xlsx (cellData, file.path(pathToOutputsDir,'cellData.xlsx'))
+
+#Create plots
+createUMAPsPerTopic(cellData, pathToPlotsDir)
+createtSNEsPerTopic(cellData, pathToPlotsDir)
 ```
+
 ### Regulatory regions analysis
 The first step in this analysis is deriving a score that evaluates the likelihood of a region belonging to a certain topic based on the proportion of region specific assignments to that topic. The software does this automatically using the getRegionScores function. 
 ```{r}
 cisTopicObject <- getRegionsScores(cisTopicObject, method='NormTop', scale=TRUE)
 ```
-Following this, we can generate a BigWig file to be able to visualise the scored regions in the genome.
+Following this, we can extract the probability scores of each region belonging to a topic, as well as binarize these scores using the in-built function. (*should read further on this*)
 ```{r}
-library(TxDb.Hsapiens.UCSC.hg19.knownGene)
-txdb <- TxDb.Hsapiens.UCSC.hg19.knownGene
+#Extract dataframe with scores for all regions for all topics
+regionScoresAllTopics = cisTopicObject@region.data
 
-getBigwigFiles(cisTopicObject, path= file.path(pathToOutputsDir, 'cisTopicBigWig'), seqlengths=seqlengths(txdb))
+#Binarize topics; get most representative regions per topic
+cisTopicObject <- binarizecisTopicsModified(cisTopicObject, pathFolder = pathToPlotsDir, thrP=0.975)
+
+#Get regions for each topic and corresponding scores
+regionScoresPerTopic = cisTopicObject@binarized.cisTopics
+
+#Combine information in final dataframe
+regionDataTopics <- createRegionDataFrame (regionScoresAllTopics, regionScoresPerTopic )
+#Add DNA sequences for each region
+regionData <- addDNAsequences (regionDataTopics)
+
+#Save dataframe
+write_xlsx (regionData, file.path(pathToOutputsDir,'regionData.xlsx'))
 ```
 
 Save the cisTopic object.
